ingress/host-based-routing/dev-workload/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  rules:
  - host: "dev.myapp.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: my-app
            port:
              number: 80
